<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewOfferActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editText18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName|number"
        android:text="@string/offerid" />

    <TextView
        android:id="@+id/textText20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interview_date" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName|number" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/interview_status" />

    <EditText
        android:id="@+id/editText15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="87dp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/company" />

    <EditText
        android:id="@+id/editText16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="87dp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/position" />

    <EditText
        android:id="@+id/editText17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="87dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recruitment_status" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="87dp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newOffer"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="366dp"
        android:onClick="newOffer"/>

    <Button
        android:id="@+id/button11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editOffer"
        android:onClick="editOffer"/>

</LinearLayout>